--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.css linguist-detectable=false
 *.html linguist-detectable=false
 *.scss linguist-detectable=false
+*.go linguist-detectable=true
+*.js linguist-detectable=true
